# FundamentosEngenhariaSoftware

./: .buildinfo  .gitignore  README.md  evaluation_api.html  genindex.html  index.html  main.py  objects.inv  preprocessing_api.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  training_api.html
.doctrees/: environment.pickle  evaluation_api.doctree  index.doctree  preprocessing_api.doctree  training_api.doctree
.github/workflows/: documentation_ci.yml  main_ci.yml
.history/: .gitignore_20250922220608  main_20250922205604.py  main_20250922205632.py  main_20250922205849.py  main_20250922210230.py  main_20250922210235.py  main_20250922210537.py  main_20250922210549.py  main_20250922210606.py  main_20250923123616.py  main_20250923123658.py  main_20251211180836.py  main_20251211181316.py  main_20251211181707.py  main_20251211181749.py  main_20251211182554.py  pyproject_20250928180940.toml  pyproject_20250928182124.toml  pyproject_20251209192500.toml  pyproject_20251209192517.toml  pyproject_20251209192550.toml  pyproject_20251209192847.toml  pyproject_20251209192941.toml  pyproject_20251209193742.toml  teste_20251208163637.py
.history/.github/: main_ci_20251211202823.yml
.history/exemplo_poo/: exemplo_1_básico_20251003092041.py  exemplo_1_básico_20251003092255.py  exemplo_1_básico_20251003092350.py  exemplo_1_básico_20251003092425.py  exemplo_2_heranca_20251003094241.py  exemplo_2_heranca_20251003094341.py  exemplo_2_heranca_20251003094902.py  exemplo_2_heranca_20251003094946.py  exemplo_3_polimorfismo_20251003095741.py  exemplo_3_polimorfismo_20251003095857.py  exemplo_7_decorador_avancado_20251003110221.py  exemplo_7_decorador_avancado_20251003110341.py  exemplo_7_decorador_avancado_20251003110400.py  exemplo_7_decorador_avancado_20251003110418.py  (+12 more)
_sources/: index.rst.txt
artifacts/: modelo_treinado.joblib
exemplo_poo/: exemplo_3_polimorfismo.py  exemplo_4_abstrato.py  exemplo_5_static_class.py  exemplo_6_decoradores.py
exemplos/: funcoes_puras.py  principio_dry.py  single_responsability.py
notebooks/: modelo final.ipynb
tests/: test_feature_engineering.py
(+137 files in other folders)
